# server

./: .clang-format  CMakeLists.txt  Device.cpp  Device.h  Dockerfile  README  README.md  Sender.cpp  Sender.h  conanfile.py  main.cpp
GUI/: CMakeLists.txt  CloneWidget.cpp  CloneWidget.h  MainWindow.cpp  MainWindow.h  example.qrc  main.cpp
app/: CMakeLists.txt  main.cpp
cmake/: FindLinuxDeployQt.cmake
data/: CMakeLists.txt  Data.h
database/: CMakeLists.txt  Database.cpp  Database.h
device/: CMakeLists.txt  Device.cpp  Device.h  main.cpp
deviceApp/: CMakeLists.txt  main.cpp
deviceApp/device/: CMakeLists.txt  Device.cpp  Device.h
deviceApp/test/: CMakeLists.txt  DeviceTest.cpp
doc/: flow.puml
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
httpServer/: CMakeLists.txt  Sender.cpp  Sender.h  Server.cpp  Server.h
logMessageHandler/: CMakeLists.txt  LogMessageHandler.cpp  LogMessageHandler.h
serverApp/: CMakeLists.txt  main.cpp
